--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Setup Git Configuration
         run: |
-          git config user.email "rxmxdhxni@gmail.com"
-          git config user.name "dante4rt"
+          git config user.email "d7go8hg9vi@gmail.com"
+          git config user.name "d7go8hg9vi"
 
       - name: Prepare Commit
         run: |
